--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -1,115 +1,162 @@
-/*
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
- */
-* {
-    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
-}
-
 body {
-    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
-    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
-    -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#E4E4E4;
-    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        color-stop(0, #A7A7A7),
-        color-stop(0.51, #E4E4E4)
-    );
-    background-attachment:fixed;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-    font-size:12px;
-    height:100%;
-    margin:0px;
-    padding:0px;
-    text-transform:uppercase;
-    width:100%;
+    background-color: transparent;
+    font-family: Arial;
+    margin: 0;
+    overflow-x: hidden;
+    -webkit-user-select: none;
 }
 
-/* Portrait layout (default) */
-.app {
-    background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:50%;
-    height:50px;                   /* text area height */
-    width:225px;                   /* text area width */
-    text-align:center;
-    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
+.navbar {
+    background-color: #222;
+    height: 40px;
+    padding: 10px;
+    text-align: center;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 40px;
 }
 
-/* Landscape layout (with min-width) */
-@media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
-    .app {
-        background-position:left center;
-        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
-        margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
-                                      /* offset horizontal: half of image width and text area width */
-    }
+.navtitle {
+    text-align: center;
+    margin: auto
 }
 
-h1 {
-    font-size:24px;
-    font-weight:normal;
-    margin:0px;
-    overflow:visible;
-    padding:0px;
-    text-align:center;
+.navbtn {
+    background-color: #333;
+    padding: 5px 10px;
+    height: 30px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 30px;
+    border-radius: 4px;
+    border: 1px solid #666
 }
 
-.event {
-    border-radius:4px;
-    -webkit-border-radius:4px;
-    color:#FFFFFF;
-    font-size:12px;
-    margin:0px 30px;
-    padding:2px 0px;
+#actionbtn {
+    float: right;
 }
 
-.event.listening {
-    background-color:#333333;
-    display:block;
+#viewbtn {
+    float: left;
 }
 
-.event.received {
-    background-color:#4B946A;
-    display:none;
+.query {
+    padding: 10px;
+    background-color: #aaa;
+    border-bottom: 1px solid #fff;
+    font-size: 14px;
+    font-weight: bold;
+    color: #222;
 }
 
-@keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
+.item {
+    padding: 20px 10px;
+    background-color: #eee;
+    border-bottom: 1px solid #fff;
+    font-size: 18px;
+    color: #333;
+    text-shadow: 0 1px #fff
 }
- 
-@-webkit-keyframes fade {
-    from { opacity: 1.0; }
-    50% { opacity: 0.4; }
-    to { opacity: 1.0; }
+
+.searchbox {
+    padding: 5px;
+    background-color: #eee;
+    border-bottom: 1px solid #fff;
 }
- 
-.blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
+
+#search {
+    box-sizing: border-box;
+    width: 100%;
+    height: 40px;
+    font-size: 16px;
+    border-radius: 20px;
+    border: 1px solid #bbb
+}
+
+.mapView {
+    display: none
+}
+
+#map {
+    height: 200px;
+}
+
+#arView, #topView {
+    display: none;
+}
+
+#arView {
+    padding: 30px 0;
+    height: 70px;
+    text-align: center
+}
+
+.arMessage {
+    color: #ddd;
+    font-size: 14px
+}
+
+#spot {
+    text-align: center
+}
+
+.name, .distance {
+    text-shadow: 0 1px #666
+}
+
+.name {
+    padding: 15px;
+    font-weight: bold;
+    background-color: rgba(204,34,34,0.5);
+    border-radius: 40px;
+    margin-bottom: 10px
+}
+
+#direction {
+    color: #fff;
+    font-size: 20px;
+    padding: 15px;
+    font-weight: bold;
+    ;
+    background-color: #a22;
+    border-radius: 40px;
+    display: inline-block;
+    margin-bottom: 10px;
+    width: 40px;
+    line-height: 40px
+}
+
+.distance {
+    font-size: 14px;
+    font-weight: normal;
+}
+
+#debug {
+    border: 1px solid #999;
+    display: none
+}
+
+.heading {
+    background-color: #999;
+    color: #eee;
+    padding: 5px;
+}
+
+#compass, #accelerometer, #geolocation {
+    padding: 5px
+}
+
+.snap {
+    position: absolute;
+    right: 31px;
+    bottom: 26px;
+}
+
+.attributing {
+    color: rgb(255, 213, 0);
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
 }
