--- a/platforms/android/assets/www/css/index.css
+++ b/platforms/android/assets/www/css/index.css
@@ -75,6 +75,76 @@ body {
     border: 1px solid #bbb
 }
 
+.range_css{
+    -webkit-appearance:none;
+    width:300px;
+    height:1rem;
+    background:linear-gradient(to bottom,#41b2f4 10%,#41d0f4);
+    cursor:ew-resize;
+    border-radius:1.5rem
+}
+
+
+.range_css::-ms-track {
+    height:1.4rem;
+    border-radius:1.5rem;
+    background:transparent;
+    border-color:transparent;
+    color:transparent;/*enleve les traits*/}
+    
+    .range_css::-ms-fill-lower {
+    height:1.4rem;
+    background:linear-gradient(to bottom,#41b2f4 10%,#41d0f4);
+    border:0 solid transparent;
+    border-radius:1.5rem}
+    
+    .range_css::-ms-fill-upper {
+    background:linear-gradient(to bottom,#41b2f4 10%,#41d0f4);
+    border:0 solid transparent;
+    border-radius:1.5rem}
+    
+    .range_css::-ms-thumb {
+    border:1px solid #ddd;
+    width:.8rem;
+    background:white;
+    height:.8rem;
+    border-radius:50%;
+    box-shadow:0 0 .125rem #aaa}
+    
+    .range_css:focus::-ms-fill-lower,.range_css:focus::-ms-fill-upper {background:linear-gradient(to bottom,#41b2f4 10%,#41d0f4)}
+    
+    .range_css::-ms-tooltip{display:none}/*enleve le title*/
+    
+    /*****fin ie*****/
+    
+    /*****firefox*****/
+    .range_css::-moz-range-thumb{
+    border:1px solid #ddd;
+    width:1.4rem;
+    height:1.4rem;
+    border-radius:50%;
+    box-shadow:0 0 .125rem #aaa}
+    
+    .range_css::-moz-range-track{
+    border:3px solid transparent;
+    padding:.5rem;
+    height:1rem;
+    border-radius:1.5rem;
+    background:none}
+    /*****fin firefox*****/
+    
+    
+    /*****Chrome,Opera*****/
+    .range_css::-webkit-slider-thumb{
+    -webkit-appearance:none;  
+    border:1px solid #ddd;
+    width:1.4rem;
+    height:1.4rem;
+    border-radius:50%;
+    background:white;
+    box-shadow:0 0 .125rem #aaa}
+    
+
 .mapView {
     display: none;
 }
